--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 .nav-container{
   height:10vh;
-  width:80vw;
+  width:65vw;
   margin-left:auto;
   margin-right: auto;
   margin-bottom:0;
@@ -23,7 +23,7 @@
 .nav-container ul a li span{
   font-family: "Open Sans", sans-serif;
   color: #000;
-  font-size: 10px;
+  font-size: 1vw;
   font-weight: 600;
   text-align: center;
   width: 10vw;
@@ -33,9 +33,9 @@
   display:inline-block;
 }
 .links{
-  float:right;
-  width: 50vw;
-  margin-top:1vw;
+
+
+
 
 
 }
@@ -86,8 +86,8 @@
 .hero-image{
   /*margin-top:29px;*/
   /*border:1px solid black;*/
-  width:80vw;
-  height:30vw;
+  width:65vw;
+  height:25vw;
   margin-bottom:0;
   margin-left:auto;
   margin-right:auto;
@@ -95,21 +95,22 @@
   background-size:100% 100%;
 }
 .logo{
-  width:20vw;
-  height:20vw;
-  position:absolute;
+  width:12vw;
+  height:12vw;
+  /*position:absolute;*/
   margin-left: 3vw;
-  float:left;
+
   background-image:url('img/HMNB003-01.PNG');
   background-size:100% 100%;
-  background-position:0 -2vw;
+  /*background-position:0 -2vw;*/
 }
 .home-content-container{
   height:30vw;
-  width:80vw;
+  width:65vw;
   margin-left:auto;
   margin-right:auto;
   font-size:0px;
+
 }
 .info-block{
   width: 35vw;
@@ -271,4 +272,46 @@
   margin-left: 2vw;
   background-color:black;
 
+}
+.logo-container{
+  width:100%;
+  display:flex;
+  justify-content: center;
+}
+.circle{
+  border-radius: 50%;
+  border: .3vw solid black;
+  width: 15vw;
+  height: 15vw;
+  display: inline-block;
+  margin-top: 5vw;
+}
+.circle p{
+  font-size:2vw;
+  line-height:10vw;
+  text-align: center;
+  opacity:0.7;
+  font-family: "Snell Roundhand", cursive;
+  font-family:"Open Sans", sans-serif;
+}
+.mani_pedi p{
+
+  color:white;
+  transform: rotate(-7deg);
+}
+.circles_row_1{
+  display:flex;
+  justify-content: space-around;
+  width:65vw;
+}
+.circles_row_2{
+  display:flex;
+  justify-content: space-around;
+  width:65vw;
+}
+.mani_pedi{
+  background-image:url('img/pedi.jpg');
+  background-size:160% 150%;
+  background-position: 0vw -2.65vw;
+  transform: rotate(7deg)
 }
