--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   list-style: none;
   display:flex;
   justify-content: space-around;
+  padding-left:0;
 }
 .nav-container ul a{
   text-decoration: none;
@@ -27,7 +28,7 @@
   font-weight: 600;
   text-align: center;
   width: 10vw;
-  min-width: 81.5px;
+  min-width: 12vw;
   margin-left:auto;
   margin-right:auto;
   display:inline-block;
@@ -421,8 +422,38 @@
 }
 .footer{
   width:80vw;
-  height:20vw;
+  height:auto;
   border:.25vw solid black;
   margin:5vw auto;
+  margin-bottom:0;
   background-color:rgba(0,0,0,0.77);
+  display:flex;
+  justify-content: space-around;
+}
+.f-choices{
+  display:inline;
+  padding-top:2vw;
+  padding-bottom: 2vw;
+  color:white;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 2vw;
+  font-family:"Open Sans", sans-serif;
+}
+.last-bit{
+  display:flex;
+  justify-content: space-around;
+  width:30vw;
+  margin:0 auto;
+}
+.email{
+  text-align: center;
+  padding-top:3.5vw;
+  font-size: 1.25vw;
+}
+.copyright{
+  margin:0 auto;
+  color:grey;
+  font-size: 1vw;
+  text-align: center;
 }
